# softwarecontainer

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Changelog  DEPENDENCIES  Doxyfile  INSTALL.md  Jenkinsfile  LICENSE  Makefile  README  README.md  Vagrantfile  controller-service.xml  index.html  iptables.c  iptables.h  iptables_rule_file  lxc-pelagicontain  pam-service.xml  pela_lxc.conf  pelagicontain-config.h.in  pelagicontain-service.xml  pelagicontain.c  pelagicontain.pc.in  pelagicontain_common.h  pelagicontaintodbusadapter.cpp  pelagicontaintodbusadapter.h  pulse.c  run-all-tests.sh  run-scan-build.sh  run-tests.sh  softwarecontainer-config.h.in  softwarecontainer.pc.in  test_app.c
agent/: CMakeLists.txt  README.md  pelagicontain-agent.conf  pelagicontain-agent.cpp  pelagicontain-agent.service.in  pelagicontain-agent.xml  softwarecontainer-agent.conf  softwarecontainer-agent.service.in  softwarecontainer-agent.xml  softwarecontainer-config.in  softwarecontainer-config.network.in
agent/component-test/: CMakeLists.txt  main.cpp  softwarecontaineragent_componenttest.cpp  softwarecontaineragent_unittest.cpp
agent/lib/: PelagicontainAgentLib.cpp  PelagicontainAgentLib.h
agent/src/: README.md  agent.cpp  containerconfigparser.cpp  containerconfigparser.h  containerutilityinterface.cpp  containerutilityinterface.h  main.cpp  pelagicontainagent.cpp  softwarecontaineragent.cpp  softwarecontaineragent.h  softwarecontaineragent_dbus_common.h  softwarecontaineragent_dbus_stub.cpp  softwarecontaineragentadaptor.cpp  softwarecontaineragentadaptor.h  softwarecontainerfactory.cpp  softwarecontainerfactory.h
agent/unit-test/: CMakeLists.txt  config_unittest.cpp  configstore_unittest.cpp  containerconfigparser_unittest.cpp  containeroptionparser_unittest.cpp  main.cpp  softwarecontaineragent_unittest.cpp
clientLib/: CMakeLists.txt  pelagicontain-lib.h
common/: CMakeLists.txt  README.md  cleanuphandler.h  common.cpp  common.h  config.cpp  config.h  copycleanuphandler.cpp  copycleanuphandler.h  createdir.cpp  createdir.h  directorycleanuphandler.cpp  directorycleanuphandler.h  filecleanuphandler.cpp  filecleanuphandler.h  filetoolkitwithundo.cpp  filetoolkitwithundo.h  gatewayconfig.cpp  gatewayconfig.h  ivi-profiling.h  jsonparser.cpp  jsonparser.h  log.h  mountcleanuphandler.cpp  mountcleanuphandler.h  netlink.cpp  netlink.h  overlaysynccleanuphandler.cpp  overlaysynccleanuphandler.h  pelagicontain-common.h  pelagicontain-log.h  recursivecopy.cpp  recursivecopy.h  recursivedelete.cpp  recursivedelete.h  signalconnectionshandler.cpp  signalconnectionshandler.h  softwarecontainer-common.cpp  softwarecontainer-common.h  softwarecontainer-log.h  (+1 more)
common/unit-test/: CMakeLists.txt  createdir_unittest.cpp  recursivecopy_unittest.cpp  recursivedelete_unittest.cpp  softwarecontainer-common_unittest.cpp  unittest_common_helpers.cpp  unittest_common_helpers.h
controller/: CMakeLists.txt
controller/doc/: CMakeLists.txt
controller/src/: CMakeLists.txt  abstractcontroller.h  applicationstarter.cpp  controller.cpp  controller.h  controllertodbusadapter.cpp  controllertodbusadapter.h  dbusadaptor.h  debug.h  fifoipc.cpp  fifoipc.h  ipcmessage.cpp  ipcmessage.h  main.cpp  socketipc.cpp  socketipc.h
controller/unit-test/: CMakeLists.txt  fifoipc_unittest.cpp  ipcmessage_unittest.cpp  main.cpp
doc/: CMakeLists.txt  README.md  api_doc.cmake  conf.py.in  design.md  doxygen.cfg.in  doxygen_mainpage.h  index.html.in  index.rst  mainpage.h  run_examples.sh  user_doc.cmake
doc/cmake_modules/: FindSphinx.cmake
doc/old_docs/: design.md
examples/: CMakeLists.txt  README.md  run-tests.sh
examples/simple/: .gitignore  CMakeLists.txt  Makefile  launch.sh  simple.c
examples/temperature/: CMakeLists.txt  launch.sh
examples/wayland/: CMakeLists.txt  README.md  launch.sh
libpelagicontain/: .gitignore  CMakeLists.txt  README.md  lxc-pelagicontain.in  pelagicontain.conf  pelagicontain.conf.in
libpelagicontain-agent/src/: CMakeLists.txt  PelagicontainAgentLib.cpp  PelagicontainAgentLib.h  README.md  libpelagicontainagent.cpp
libpelagicontain/component-test/: README.md  test_appshutdown.py  test_cleanshutdown.py  test_dbusgateway.py  test_devicenodegateway.py  test_kill.py  test_noumountpropagation.py  test_pulsegateway.py  test_runner.sh
libpelagicontain/include/: CMakeLists.txt  container.h  gateway.h  libpelagicontain.h  pelagicontain.h
libpelagicontain/src/: CMakeLists.txt  README.md  cgroupsgateway.cpp  container.cpp  container.h  dbusgateway.cpp  dbusgateway.h  envgateway.h  gateway.cpp  generators.h  libpelagicontain.cpp  pelagicontain-lib.cpp  pelagicontain.cpp
libpelagicontain/unit-test/: CMakeLists.txt  README.md  cgroupsgateway_unittest.cpp  dbusgateway_unittest.cpp  envgateway_unittest.cpp  filegateway_unittest.cpp  gateway_test.cpp  gateway_test.h  main.cpp  networkgateway_unittest.cpp  pelagicontain_unittest.cpp  pelagicontainlib_unittest.cpp  pulsegateway_unittest_data.h
libsoftwarecontainer/: .gitignore  CMakeLists.txt  README.md  lxc-softwarecontainer.in  softwarecontainer.conf.in  softwarecontainer.pc.in  softwarecontainer_network.conf.in
libsoftwarecontainer-agent/src/: CMakeLists.txt  README.md  libsoftwarecontaineragent.cpp
libsoftwarecontainer/component-test/: CMakeLists.txt  README.md  common.py  (+30 more)
pelagicontain/: CMakeLists.txt  lxc-hook-makeslave.sh  lxc-pelagicontain  lxc-pelagicontain.in  pelagicontain.conf
src/: CMakeLists.txt  Makefile  config.c  config.cpp  config.h  configparser.h  container.cpp  container.h  controllerinterface.cpp  controllerinterface.h  dbusadaptor.h  dbusgateway.cpp  dbusgateway.h  dbusmainloop.cpp  dbusmainloop.h  dbusproxy.cpp  dbusproxy.h  debug.h  gateway.h  generators.c  generators.cpp  generators.h  index.doc  iptables.c  iptables.cpp  iptables.h  lxc-pelagicontain  main.cpp  mainloopabstractinterface.h  networkgateway.cpp  pamabstractinterface.h  paminterface.cpp  paminterface.h  pamproxy.h  pelagicontain  pelagicontain.c  pelagicontain.cpp  pelagicontain.h  pelagicontain_common.h  pelagicontaincommon.h  (+9 more)
(+2185 files in other folders)
